# pgRDF

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  Justfile  LATEST.md  LICENSE  META.json  Makefile  NOTICE  PROVENANCE.md  README.md  README.pgxn.md  RELEASE_NOTES.md  ROADMAP.md  TEST.ONTOLOGY-SET.md  pgrdf.control  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-pgrx/: action.yml
.github/workflows/: ci.yml  oci-publish.yml  perf-nightly.yml  publish-crate.yml.disabled  regression-w3c.yml  release.yml  update-latest-md.yml
.playwright-mcp/: page-2026-06-28T09-54-53-920Z.yml
compose/: .env.example  README.md  builder.Containerfile  compose.yml  parity-check.sh
docs/: 01-architecture.md  02-storage.md  03-query.md  04-inference.md  05-validation.md  06-installation.md  07-development.md  08-testing.md  09-release.md  10-roadmap.md  11-recipes.md  README.md
examples/shacl/: sample-shape.ttl
examples/sparql/: sample.rq
examples/ttl/: sample.ttl
fixtures/: lubm-closure-sample.nt  ontologies.manifest.json  ontologies.sh
fixtures/regression/: blank-nodes.ttl  carve-blanknode-sample.nt  lang-tags.ttl  multiload-dedup-sample.nt  rdf-list.ttl  synth-100.sh  synth-100.ttl  synth-10k.sh  synth-10k.ttl  triples-5.ttl  typed-literals.ttl  wikidata-truthy-software-engineering-1hop-en.nt  wikidata-truthy-software-engineering-1hop.nt
guide/: 00-intro.md  01-install.md  02-loading-rdf.md  03-querying.md  06-validation-recipes.md  README.md
guide/clients/: go.md  python.md  rust.md  typescript.md
scripts/: gh-watch.sh
specs/: ERRATA.v0.2.md  ERRATA.v0.4.md  ERRATA.v0.5.md  ERRATA.v0.6.md  SPEC.pgRDF.BENCH.v0.6.0.md  SPEC.pgRDF.BENCH.v0.6.14.md  SPEC.pgRDF.INSTALL.v0.2.md  SPEC.pgRDF.INSTALL.v0.6.14.md  SPEC.pgRDF.LLD.v0.2.md  SPEC.pgRDF.LLD.v0.3.md  SPEC.pgRDF.LLD.v0.4-FUTURE.md  SPEC.pgRDF.LLD.v0.4.md  SPEC.pgRDF.LLD.v0.5-FUTURE.md  SPEC.pgRDF.LLD.v0.5.md  SPEC.pgRDF.LLD.v0.6-FUTURE.md  SPEC.pgRDF.LLD.v0.6.14.md  SPEC.pgRDF.v0.5.FEATURES.md
sql/: pgrdf--0.5.1--0.5.24.sql  pgrdf--0.5.1--0.5.25.sql  pgrdf--0.5.1--0.5.26.sql  pgrdf--0.5.1--0.5.27.sql  pgrdf--0.5.1--0.5.28.sql  pgrdf--0.5.1--0.5.29.sql  pgrdf--0.5.1--0.5.30.sql  pgrdf--0.5.1--0.5.31.sql  pgrdf--0.5.1--0.5.32.sql  pgrdf--0.5.1--0.5.33.sql  pgrdf--0.5.1--0.5.34.sql  pgrdf--0.5.1--0.5.35.sql  pgrdf--0.5.1--0.5.36.sql  pgrdf--0.5.1--0.5.37.sql  pgrdf--0.5.1--0.5.38.sql  pgrdf--0.5.1--0.5.39.sql  pgrdf--0.5.1--0.5.40.sql  pgrdf--0.5.1--0.5.41.sql  pgrdf--0.5.1--0.5.42.sql  pgrdf--0.5.1--0.5.43.sql  pgrdf--0.5.1--0.6.10.sql  pgrdf--0.5.1--0.6.11.sql  pgrdf--0.5.1--0.6.12.sql  pgrdf--0.5.1--0.6.13.sql  pgrdf--0.5.1--0.6.14.sql  pgrdf--0.5.1--0.6.15.sql  pgrdf--0.5.1--0.6.16.sql  pgrdf--0.5.1--0.6.17.sql  pgrdf--0.5.1--0.6.18.sql  pgrdf--0.5.1--0.6.2.sql  pgrdf--0.5.1--0.6.3.sql  pgrdf--0.5.1--0.6.4.sql  pgrdf--0.5.1--0.6.5.sql  pgrdf--0.5.1--0.6.6.sql  pgrdf--0.5.1--0.6.7.sql  pgrdf--0.5.1--0.6.8.sql  schema_v0_2_0.sql  schema_v0_4_0_graphs.sql
src/: lib.rs
src/inference/: mod.rs  reasonable.rs
src/query/: executor.rs  guc.rs  mod.rs  parser.rs  path.rs  plan_cache.rs
src/storage/: construct_ingest.rs  dict.rs  graphs.rs  hexastore.rs  loader.rs  loader_ta11.rs  mod.rs  partition.rs  shmem_cache.rs  stats.rs
src/storage/staged/: jobctl.rs  mod.rs  phases.rs  pool.rs
src/validation/: mod.rs  pgrdf_sparql.rs  shacl.rs
tests/oracle/: Cargo.toml
tests/oracle/src/: compare.rs  eval.rs  main.rs  run.rs
tests/oracle/tests/: cli.rs
tests/perf/: README.md  benchmark-runner.sh  render-history.py  smoke-ontologies.expected.tsv  smoke-ontologies.sh
tests/perf/lubm/: .gitignore  LUBM-100-PASSES.md  README.md  RESULTS.m4-join-order.md  baseline.lubm-1.json  baseline.lubm-1.md  baseline.lubm-10.combined.json  baseline.lubm-10.combined.md  baseline.lubm-10.json  baseline.lubm-10.md  compare-to-baseline.py  run-lubm.sh  spike-ta-d2.lubm-1.json  spike-ta-d2.lubm-1.md  spike-ta-d3.lubm-1.json  spike-ta-d3.lubm-1.md  spike-ta10.lubm-1.json  spike-ta10.lubm-1.md  spike-ta11.lubm-1.json  spike-ta11.lubm-1.md
tests/perf/lubm-shacl-sparql/: data.ttl  expected.json  run.sh  shapes.ttl
tests/perf/lubm-shape/: data.ttl  run.sh
tests/pgrx/: basic_install.rs
tests/regression/: README.md  run.sh
tests/regression/expected/: 00-smoke.out  100-construct-foundation.out  100-sparql-order-by-type-aware.out  101-construct-variable-templates.out  102-construct-blank-node-templates.out  103-construct-multi-triple-templates.out  104-construct-graph-scoped-where.out  105-construct-where-shorthand.out  106-construct-round-trip.out  107-sparql-parse-construct.out  108-property-path-inverse.out  109-property-path-plus.out  11-quads-basic.out  110-property-path-star-opt.out  111-property-path-materialised-closure.out  112-optional-multi-triple.out  113-values-inline.out  114-bind-downstream.out  115-aggregate-over-union.out  116-describe.out  117-materialize-rdfs.out  118-lifecycle-iri-overloads.out  119-parse-nquads.out  12-graphs.out  120-parse-trig.out  121-agg-union-residual.out  122-shacl-modes.out  123-dictionary-lexical-contract.out  124-end-to-end-lexical-rehydration.out  134-wikidata-type-closure-materialise.out  135-type-closure-lubm-patterns.out  136-staged-multiload-dedup.out  137-carve-graph-subview.out  138-carve-graph-neighbourhood.out  139-carve-guards.out  140-truncation-fail-closed.out  20-load-turtle.out  21-typed-literals.out  22-lang-tags.out  24-rdf-list.out  (+52 more)
tests/regression/scripts/: pg-dump-dict-roundtrip.sh  pg-dump-roundtrip.sh  verify-installed-artifacts.sh
tests/regression/sql/: 00-smoke.sql  10-dict-roundtrip.sql  100-construct-foundation.sql  (+97 more)
tests/w3c-shacl/: README.md  run.sh
tests/w3c-sparql/: README.md  run.sh
tools/: render-latest-md.py  validate-bundle.sh
web/: LLD_ Ontology-Driven Architecture on Azure.md  README.md  compose.local.yml  requirements.txt
web/app/: auth.py  config.py  main.py  registry.py
web/sql/: 000-meta.sql  001-project-init.sql  010-seed-demo.sql
web/tools/: provision.py
(+277 files in other folders)
